# Flexible-neural-network

./: .Score.csv.swp  README.md  pyproject.toml
datasets/: MultiClassScore.csv  Score.csv  binary_dataset_complex.csv  file.csv
flexible_nn/: _math.py  a.py  activation_functions.py  main.py
